--- a/templates/uorb_rtps_message_ids.yaml
+++ b/templates/uorb_rtps_message_ids.yaml
@@ -201,6 +201,7 @@ rtps:
     send: true
   - id: 93
     msg: VehicleGlobalPosition
+    send: true
   - id: 94
     msg: VehicleGpsPosition
   - id: 95
